# otp-std

./: CHANGELOG.md  Cargo.toml  README.md  SECURITY.md  changelogging.toml
changes/: ~refactor.change.md
src/: algorithm.rs  base.rs  counter.rs  digits.rs  hotp.rs  int.rs  lib.rs  macros.rs  otp.rs  period.rs  skew.rs  time.rs  totp.rs
src/auth/: core.rs  label.rs  mod.rs  part.rs  query.rs  scheme.rs  url.rs  utf8.rs
src/otp/: core.rs  mod.rs  type_of.rs
src/secret/: core.rs  encoding.rs  generate.rs  length.rs  mod.rs
tests/: compliance.rs
